--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Patatap</title>
+    <title>Patatap Clone</title>
     <link rel="stylesheet" type="text/css" href="../assets/css/patatap.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.js" type="text/javascript"></script>
     <script src="assets/js/lib/paper-full.min.js" type="text/javascript"></script>
